--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,6 +82,10 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -107,7 +111,9 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation ("com.facebook.react:react-native:+")
     implementation("com.facebook.react:flipper-integration")
+    implementation project(':react-native-callkeep')
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
