--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-callkeep": "^4.3.12",
     "react-native-pager-view": "^6.2.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-webrtc": "^118.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -37,6 +39,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-asset": "^2.1.1",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
