--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-top-tabs": "^6.6.6",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@wazo/sdk": "^0.40.4",
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.4",
@@ -23,6 +24,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-voip-push-notification": "^3.3.2",
     "react-native-webrtc": "^118.0.1"
   },
   "devDependencies": {
