--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.0",
-    "@react-navigation/material-top-tabs": "^6.6.6",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-pager-view": "^6.2.3",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-tab-view": "^3.5.2",
