--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -23,4 +23,6 @@ dependencyResolutionManagement {
 rootProject.name = 'voip_rn'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
+include ':react-native-callkeep'
+project(':react-native-callkeep').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-callkeep/android')
 includeBuild('../node_modules/@react-native/gradle-plugin')
