--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-callkeep": "^4.3.12",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-voip-push-notification": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
