--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,4 +18,16 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+      maven {
+          name "linphone.org maven repository"
+          url "https://linphone.org/maven_repository/"
+          content {
+              includeGroup "org.linphone"
+          }
+      }
+    }
+}
+
 apply plugin: "com.facebook.react.rootproject"
