--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-linphone-sdk": "^0.2.10",
     "react-native-pager-view": "^6.2.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
